
Changes in Version 0.9-2

  o improvements to basic device mode (options(device="playwith")):
    preview button in annotation tool now works; and there is an
    "undo annotation" tool, allowing last annotation to be removed.

Changes in Version 0.9-1

  o cairoDevice package in Depends rather than Imports, since
    it sets options(device="Cairo"), which is bad if not attached!

Changes in Version 0.9-0

  o user settings: playwith.options / playwith.getOption.

Changes in Version 0.8-57

  o now works on Linux!
    (had problems related to event loop -- sizing widgets etc).

  o new function playGetIDs() gives currently identified points.

  o device size, rather than window size, can now be specifed.
    This matches other devices. Also pointsize can now be set.

  o option to show tooltips for toolbar buttons (uses gtkMain()).

  o mouse clicks better distinguished from drags: time <= 1/4 sec.

  o xlim/ylim and time mode now handles date-time classes better,
    including "yearmon" and "yearqtr" from the zoo package.

  o zooming now tries to account for axis padding.

  o plot call is now deparsed without showAttributes option (for
    clarity). Call objects are used to maintain date time classes.

  o "clear" button now shows a graphical dialog under linux.

  o warning about lattice subscripts now checks the panelArgs
    (it was warning spuriously before, eg xyplot.zoo).

  o more use of locks to try to avoid multi-thread conflicts.

  o attempt to set GTK tooltips is now a *silent* try(), again.

  o zoom and identify tools check par("mfrow") in case it is a
    multi-figure base graphics plot, and omit themselves if so.

Changes in Version 0.8-56

  o arguments to `parameters` can use I() to force a spinbutton
    rather than slider.

Changes in Version 0.8-55

  o argument `parameters`: automatically constructs
    widgets to control parameter values appearing in the call.

  o default action when dragging on the plot is zoom.